# tic-toe-tac

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: build-window.yml
docs/: ASCII_Diag_stucture.md
src/: app_state.rs  config.rs  lib.rs  main.rs  plugin.rs
src/board/: components.rs  events.rs  mod.rs  resources.rs  systems_cleanup.rs  systems_input.rs  systems_logic.rs  systems_setup.rs  systems_state.rs  traits.rs
src/core/: board.rs  mod.rs  player.rs  rules.rs
src/debug_tools/: mod.rs  systems_hotkeys.rs  systems_overlay.rs
src/debug_tools/logging/: mod.rs  resources.rs  systems.rs
src/fps/: mod.rs  systems.rs
src/input/: events.rs  mod.rs  systems_mouse.rs
src/input_device/: events.rs  mod.rs  systems_mouse.rs
src/intent/: traits.rs
src/localization/: mod.rs
src/settings/: mod.rs
src/sounds/: mod.rs  resources.rs  systems_load.rs  systems_play.rs
src/themes/: mod.rs  resources.rs  systems_apply.rs  systems_load.rs
src/themes/animation/: systems.rs
src/ui/: buttons.rs  game_over_ui.rs  in_game_ui.rs  main_menu.rs  mod.rs
src/ui/animation/: mod.rs
src/utils/: coords.rs
